<resources>
    <string name="app_name">Weather Lion Widget</string>
    <string name="app_settings">Weather Data Settings</string>
    <string name="app_about">About Weather Lion</string>
    <string name="app_about_beta">About Weather Lion (Beta)</string>
    <string name="app_licences">Licences</string>
    <string name="general_settings">GENERAL</string>
    <string name="app_welcome_title">Weather Lion Widget</string>
    <string name="app_greeting">Welcome to Weather Lion</string>
    <string name="goto_settings">Use the settings option on the action bar to setup the application\'s behaviour.</string>
    <string name="wx_source">Weather Source</string>
    <string name="update_interval">Update Interval</string>
    <string name="geolocation">Use Geolocation</string>
    <string name="location">Location</string>
    <string name="metric">Use Metric</string>
    <string name="iconSet">Icon set</string>
    <string name="background">Widget Background</string>
    <string name="pref_wx_source">pref_wx_source</string>
    <string name="pref_update_interval">pref_update_interval</string>
    <string name="pref_use_gps">pref_use_gps</string>
    <string name="pref_location">pref_location</string>
    <string name="pref_use_metric">pref_use_metric</string>
    <string name="pref_icon_set">pref_icon_set</string>
    <string name="pref_widget_background">pref_widget_background</string>
    <string name="pref_ui_fonts">pref_ui_fonts</string>
    <string name="current_city">City Name, Region Name</string>
    <string name="current_conditions">Current Conditions</string>
    <string name="current_location">Current Location</string>
    <string name="current_time">Mon, Jan 01, 7:30 AM</string>
    <string name="last_updated">Jan 01, 7:00 AM</string>
    <string name="current_reading_icon">Current Reading Icon</string>
    <string name="current_wind_indicator">Current Wind Indicator</string>
    <string name="feels_like_main">Feels Like 0°</string>
    <string name="feels_like_widget">Feels Like 0°</string>
    <string name="no_reading">0°F</string>
    <string name="no_reading_e">0°/0°</string>
    <string name="no_reading_f">0° 0°</string>
    <string name="no_reading_u">0°</string>
    <string name="Monday">Mon</string>
    <string name="Tuesday">Tue</string>
    <string name="Wednesday">Wed</string>
    <string name="Thursday">Thu</string>
    <string name="Friday">Fri</string>
    <string name="Hour1">1:00</string>
    <string name="Hour2">2:00</string>
    <string name="Hour3">3:00</string>
    <string name="Hour4">4:00</string>
    <string name="Hour5">5:00</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="refresh_weather_data">Refresh weather data</string>
    <string name="sunrise_placeholder">6:00 AM</string>
    <string name="sunset_placeholder">6:00 PM</string>
    <string name="provider_placeholder">Weather Provider</string>
    <string name="provider_icon">Provider Icon</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="date_pace_holder">Monday, Jan 1</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="default_wind">Wind: E 7 mph</string>
    <string name="activity_wind_title">WIND</string>
    <string name="activity_wind_direction">E</string>
    <string name="activity_wind_reading">E 7 mph</string>
    <string name="activity_wind_speed">7 mph</string>
    <string name="default_humidity">0%</string>
    <string name="default_duration">10 hours and 20 mins</string>
    <string name="city_finder_title">City Locator</string>
    <string name="icon_set_dialog_title">Icon set</string>
    <string name="city_finder_hint">Enter a location</string>
    <string name="city_search_tip">
        Type the city name for which the weather is required.
        Example Pine Hills or Kingston. After entering the city name, press the search glass.
        Select the city from the drop down list when displayed and click SAVE to set it as
        the current weather location.
    </string>
    <string name="enter_city_name">Search for city</string>
    <string name="find_city">Search</string>
    <string name="dismiss">Dismiss</string>
    <string name="key_dialog_title">Data Access Key Entry</string>
    <string name="access_provider">Access Provider:</string>
    <string name="access_provider_hint">Access Provider</string>
    <string name="key_name">Key Name:</string>
    <string name="key_name_hint">Key Name</string>
    <string name="key_value">Key Value:</string>
    <string name="key_value_hint">Key Value</string>
    <string name="add_key">Add Key</string>
    <string name="view_licences">View Licences</string>
    <string name="delete_key">Delete Key</string>
    <string name="finish">Finish</string>
    <string name="data_provider_hint">Select Data Provider</string>
    <string name="provider_api_key_name_hint">API Key Name</string>
    <string name="provider_api_key_value_hint">API Key Value</string>
    <string name="message_dialog_title">Dialog Title</string>
    <string name="message_dialog_message">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="Ok">OK</string>
    <string name="Save">SAVE</string>
    <string name="show_key">Show Key</string>
    <string name="announcement">
        <![CDATA[
            Weather Lion is designed to consume data from web services such as:
			<ol>
			    <li>Dark Sky Weather: <a href=\"https://darksky.net/dev/\">https://darksky.net/dev</a></li>
			    <li>Geonames:&nbsp;<a href=\"http://www.geonames.org/\">http://www.geonames.org/</a></li>
                <li>Here Maps:&nbsp;<a href=\"https://developer.here.com/\">https://developer.here.com/</a></li>
                <li>Open Weather Map:&nbsp;<a href=\"https://openweathermap.org/api\">https://openweathermap.org/api</a></li>
                <li>Weather Bit:&nbsp;<a href=\"https://www.weatherbit.io/api\">https://www.weatherbit.io/api</a></li>
                <li>Yahoo! Weather:&nbsp;<a href=\"https://developer.yahoo.com/weather/\">https://developer.yahoo.com/weather/</a></li>
			</ol>
			<p>
			    In order for the program to us any of these providers, you must acquire key from each services provider.
			     Use the links provided to obtain the relevant access keys for the weather data.
			</p>
            <p>
                The program will be able to display weather from Yr.no (Norwegian Meteorological Institute) as they don\'t require a key.
            </p>
            <p>
                <span style=\'color: #FF0000;\'><b>**Access must be supplied for any the specified weather providers and a username for use
                with the geonames website </span></b>(<span style=\'color: #FFFFFF;\'><a href=\"http://www.geonames.org/\">
                http://www.geonames.org/</a></span>)<span style=\'color: #FF0000;\'><b> for city search.</b></span>
            </p>
        ]]>
    </string>
    <string name="dialog_icon">Dialog Icon</string>
    <string name="drop_down_arrow">Drop Down Arrow</string>
    <string name="cancel">Cancel</string>
    <string name="api_key">api_key</string>
    <string name="user_name">username</string>
    <string name="consumer_secret">consumer_secret</string>
    <string name="consumer_key">consumer_key</string>
    <string name="app_id">app_id</string>
    <string name="city_search_dialog_title">Enter Location</string>
    <string name="close_dialog">Close dialog</string>
    <string name="clear_search_field">Clear Search Field</string>
    <string name="indicate_task_running">Indicate Task Running</string>
    <string name="initiate_search">Initiate Search</string>
    <string name="display_settings">DISPLAY</string>
    <string name="default_update_interval">180000</string>
    <string name="mostly_sunny">Mostly Sunny</string>
    <string name="weather_provider_logo">Weather Provider Logo</string>
    <string name="current_weather_provider">Current Weather Provider</string>
    <string name="updated_place_holder">Updated 1 hour ago</string>
    <string name="add_delete_keys">Add/Delete Keys</string>
    <string name="reload_widget">Sync Widget</string>
    <string name="settings">Settings</string>
    <string name="popup_menu_icon">Popup Menu Icon</string>
    <string name="popup_menu_launcher">Popup Menu Launcher</string>
    <string name="optional_fonts">Optional Fonts</string>
    <string name="optional_font_faces">Optional Font Faces</string>
    <string name="current_background_style">Current background style applied</string>
    <string name="current_icon_set">Current icon set in use</string>
    <string name="title_activity_weather_scroll">WeatherScroll</string>
    <string name="app_title_beta">Weather Lion (Beta)</string>
    <string name="author_name">Paul O. Patterson</string>
    <string name="company_name">BushBungalo Productions™ 2005–2019</string>
    <string name="version_info">Version 1.0</string>
    <string name="all_rights">© All rights reserved</string>
    <string name="about">
        "Weather Lion is an ongoing effort to create a robust Android weather widget as I continue to grow as a computer programmer."
        "\n\n\n\nPraise Ye JAH!!!!"
    </string>
    <string name="app_icon">App Icon</string>
    <string name="app_logo">App Logo</string>
    <string name="notif_wind">Wind</string>
    <string name="notif_humidity">Humidity</string>
</resources>