<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlDialogTitleBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/wl_custom_dialog_title">

        <ImageView
            android:id="@+id/diaIcon"
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dip"
            android:src="@drawable/icon"
            android:contentDescription="@string/dialog_icon" />

        <TextView
            android:id="@+id/txvDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_gravity="center_vertical"
            android:layout_toEndOf="@+id/diaIcon"
            android:layout_toStartOf="@+id/imvCloseDialog"
            android:gravity="start|center_vertical"
            android:layout_marginStart="8dip"
            android:text="@string/city_search_dialog_title"
            android:textAppearance="?android:attr/textAppearance"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imvCloseDialog"
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="10dip"
            android:src="@drawable/wl_close_dialog"
            android:contentDescription="@string/close_dialog" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlDialogBody"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlDialogTitleBar"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@color/off_white">

        <FrameLayout
            android:id="@+id/searchFrame"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/edtSearchCity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/wl_rounded_50r_light_background"
                android:drawablePadding="8dp"
                android:hint="@string/enter_city_name"
                android:padding="4dp"
                android:paddingStart="40dp"
                android:paddingTop="2dp"
                android:paddingEnd="14dp"
                android:paddingBottom="2dp"
                android:autofillHints=""
                android:inputType="text" />

            <ImageButton
                android:id="@+id/searchBtn"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_margin="10dp"
                android:background="@drawable/wl_search_glass"
                android:contentDescription="@string/initiate_search" />

            <ImageButton
                android:id="@+id/btnWorking"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_gravity="end|center_vertical"
                android:visibility="invisible"
                android:layout_margin="10dp"
                android:background="@drawable/wl_loading_arrow"
                tools:visibility="visible"
                android:contentDescription="@string/indicate_task_running" />

            <ImageButton
                android:id="@+id/btnClear"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_gravity="end|center_vertical"
                android:visibility="invisible"
                android:layout_margin="10dp"
                android:background="@drawable/wl_clear_search"
                tools:visibility="visible"
                android:contentDescription="@string/clear_search_field" />
        </FrameLayout>

        <TextView
            android:id="@+id/txvDialogMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchFrame"
            android:layout_margin="10dp"
            android:text="@string/city_search_tip"
            android:textColor="@color/black_opacity_70"
            android:textSize="16sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="100dip"
            android:layout_height="30dip"
            android:layout_below="@+id/txvDialogMessage"
            android:layout_toStartOf="@+id/btnOk"
            android:layout_marginTop="10dip"
            android:layout_marginEnd="8dip"
            android:background="@drawable/wl_aqua_rounded_btn_bg"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:stateListAnimator="@null" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="100dip"
            android:layout_height="30dip"
            android:layout_below="@+id/txvDialogMessage"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dip"
            android:background="@drawable/wl_aqua_rounded_btn_bg"
            android:gravity="center"
            android:text="@string/Ok"
            android:textColor="#FFFFFF"
            android:stateListAnimator="@null" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlDialogFooter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlDialogBody"
        android:background="@drawable/wl_custom_dialog_footer" />

</RelativeLayout>