<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/notification_basic_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false">

    <LinearLayout
        android:id="@+id/cityTempLayout"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="4dip" >

        <TextView
            android:id="@+id/txvCityName"
            android:textSize="12sp"
            android:textStyle="normal"
            android:textColor="#252525"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="20dip"
            android:text="@string/current_location"
            android:singleLine="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip"
            android:minHeight="20dip">

            <ImageView
                android:id="@+id/weather_icon"
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_gravity="center_vertical"
                android:src="@drawable/clear"
                android:contentDescription="@string/app_icon"/>

            <TextView
                android:id="@+id/txvCurrentTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="#252525"
                android:text="@string/no_reading_u"
                android:layout_marginStart="3dip" />

            <TextView
                android:id="@+id/txvCurrentReadings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_reading_e"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="#252525"
                android:ellipsize="end"
                android:minWidth="5dip"
                android:maxLines="1"
                android:layout_marginStart="12dip" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0"
        android:layout_weight="1.0"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/label"
            android:orientation="vertical"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.61"
            android:layout_marginStart="4.0dip">

            <TextView
                android:id="@+id/label_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="#515151"
                android:ellipsize="end"
                android:minHeight="20dip"
                android:text="@string/notif_humidity"
                android:singleLine="true" />

            <TextView
                android:id="@+id/label_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="#515151"
                android:ellipsize="end"
                android:layout_marginTop="2dip"
                android:minHeight="20dip"
                android:text="@string/notif_wind"
                android:singleLine="true"
                android:includeFontPadding="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/data"
            android:gravity="end"
            android:orientation="vertical"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.39"
            android:layout_marginStart="4dip">

            <TextView
                android:id="@+id/notification_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="#515151"
                android:ellipsize="end"
                android:minHeight="20dip"
                android:text="@string/default_humidity"
                android:singleLine="true" />

            <TextView
                android:id="@+id/notification_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="#515151"
                android:ellipsize="end"
                android:layout_marginTop="2dip"
                android:minHeight="20dip"
                android:fontFamily="sans_serif"
                android:text="@string/default_wind"
                android:singleLine="true" android:includeFontPadding="false" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>